--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="shortcut icon" type="image/png" href="assets/img/head.png"/>
 
     <!-- assets -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/script.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css?v=1" />
+    <script src="assets/js/script.js?v=1"></script>
 </head>
 
 
