--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- title/icon -->
-    <title>hello, welcome</title>
-    <link rel="shortcut icon" type="image/png" href="assets/img/head.png"/>
+    <title>if god</title>
+    <link rel="shortcut icon" type="image/png" href="assets/img/icon.png"/>
 
     <!-- assets -->
     <link rel="stylesheet" href="assets/css/style.css?v=1" />
@@ -22,14 +22,14 @@
         <div class="box">
             <!-- header -->
             <div class="header">
-                <p class="maintext">kenzo</p>
-                <p class="subtext">beginner dev</p>
+                <p class="maintext">w8r7ulrk2twzy0god5feo4</p>
+                <p class="subtext"></p>
             </div>
             
             <!-- socials -->
             <div class="footer">
-                <img src="assets/img/spotify-512.png" class="social-logo" onclick="openURL('spotify')"></img>
-                <img src="assets/img/lastfm-512.png" class="social-logo" onclick="openURL('lastfm')"></img>
+                <img href="https://instagram.com/kktec9" src="assets/img/instagram-512.png" class="social-logo"></img>
+                <img href="https://last.fm/user/kenzovmp" src="assets/img/lastfm-512.png" class="social-logo"></img>
             </div>
         </div>
     </div>
