--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
             
             <!-- socials -->
             <div class="footer">
-                <img href="https://instagram.com/kktec9" src="assets/img/instagram-512.png" class="social-logo"></img>
-                <img href="https://last.fm/user/kenzovmp" src="assets/img/lastfm-512.png" class="social-logo"></img>
+                <a href="https://last.fm/user/kenzovmp">
+                        <img src="assets/img/instagram-512.png" class="social-logo"></img>
+                </a>
+                <a href="https://instagram.com/kktec9">
+                        <img src="assets/img/lastfm-512.png" class="social-logo"></img>
+                </a>
             </div>
         </div>
     </div>
