--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <div class="box">
             <!-- header -->
             <div class="header">
-                <p class="maintext">w8r7ulrk2twzy0god5feo4</p>
+                <p class="maintext">god is real</p>
                 <p class="subtext"></p>
             </div>
             
             <!-- socials -->
             <div class="footer">
-                <a href="https://instagram.com/kktec9">
+                <a href="https://instagram.com/luvlying2u">
                         <img src="assets/img/instagram-512.png" class="social-logo"></img>
                 </a>
                 <a href="https://last.fm/user/kenzovmp">
