--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- title/icon -->
-    <title>if god</title>
+    <title>is god real</title>
     <link rel="shortcut icon" type="image/png" href="assets/img/icon.png"/>
 
     <!-- assets -->
@@ -19,6 +19,7 @@
     <div class="bg-image"></div>
 
     <div class="main">
+        
         <div class="box">
             <!-- header -->
             <div class="header">
