--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="box">
             <!-- header -->
             <div class="header">
-                <p class="maintext">god is real</p>
+                <p class="maintext">mashallah</p>
                 <p class="subtext"></p>
             </div>
             
